# starcoin-crypto

./: Cargo.toml
crates/aptos-crypto/: Cargo.toml
crates/aptos-crypto-derive/: Cargo.toml
crates/aptos-crypto-derive/src/: lib.rs  unions.rs
crates/aptos-crypto/benches/: hash.rs
crates/aptos-crypto/src/: encoding_type.rs  hash.rs  hkdf.rs  multi_ed25519.rs  noise.rs  test_utils.rs
crates/aptos-crypto/src/ed25519/: ed25519_keys.rs  ed25519_sigs.rs
crates/aptos-crypto/src/poseidon_bn254/: constants.rs
crates/aptos-crypto/src/secp256r1_ecdsa/: secp256r1_ecdsa_sigs.rs
crates/aptos-crypto/src/unit_tests/: cryptohasher.rs  hash_test.rs  hkdf_test.rs  multi_ed25519_test.rs
crates/diem-crypto/: Cargo.toml  build.rs
crates/diem-crypto-derive/: Cargo.toml
crates/diem-crypto-derive/src/: lib.rs
crates/diem-crypto/benches/: sha3.rs
crates/diem-crypto/ext/: KeccakHash.c  KeccakP-1600-AVX512-config.h  KeccakP-1600-AVX512.c  KeccakSponge.c  KeccakSponge.h  KeccakSponge.inc  align.h  config.h
crates/diem-crypto/src/: compat.rs  ed25519.rs  hash.rs  hkdf.rs  lib.rs  multi_ed25519.rs  noise.rs  test_utils.rs  traits.rs  validatable.rs  x25519.rs
crates/diem-crypto/src/unit_tests/: cryptohasher.rs  ed25519_test.rs  hash_test.rs  hkdf_test.rs  multi_ed25519_test.rs  noise_test.rs
crypto/: Cargo.toml
crypto/crypto-macro/: Cargo.toml
crypto/crypto-macro/src/: lib.rs
crypto/src/: hash.rs  keygen.rs  lib.rs
crypto/src/multi_ed25519/: mod.rs  multi_shard.rs  tests.rs
crypto/tests/: crypto_hash_test.rs
