[workspace]
resolver = "2"

members = [
    "crates/diem-crypto",
    "crates/aptos-crypto",
    "crypto",
]

default-members = [
    "crypto",
]


[profile.dev]
panic = "unwind"

[profile.release]
debug = false
panic = "unwind"
debug-assertions = false
codegen-units = 1

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }