[workspace]
resolver = "2"

members = [
    "crates/aptos-crypto",
    "crates/aptos-crypto-derive",
    "crypto",
    "crypto/crypto-macro",
]

default-members = ["crypto"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.71"
ark-bn254 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
blake2 = "0.10.4"
blst = "0.3.11"
blake2-rfc = "0.2.18"
bulletproofs = { version = "4.0.0" }
bytes = { version = "1.4.0", features = ["serde"] }
byteorder = "1.4.3"
bitvec = "1.0.1"
criterion = "0.3.5"
crypto-common = { git = "https://github.com/starcoinorg/crypto-common", rev = "c350ab8d2b61f24d4a6102e5797a29b3950b92b2", default-features = false, features = ["fuzzing"]}
curve25519-dalek = "3"
curve25519-dalek-ng = "4"
digest = "0.9.0"
digest_0_10 = { package = "digest", version = "0.10.7" }
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ff = { version = "0.13", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.12.3"
libsecp256k1 = "0.7.0"
merlin = "3"
more-asserts = "0.3.0"
neptune = { version = "13.0.0", default_features = false }
num-bigint = { version = "0.3.2", features = ["rand"] }
num-integer = "0.1.42"
once_cell = "1.10.0"
openrpc-schema = { git = "https://github.com/starcoinorg/openrpc-rs", rev = "ede68cb6bd9cee80225ac978a9b982c2c5617d0f" }
p256 = { version = "0.13.2" }
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
proc-macro2 = "1.0.18"
proptest = "1.4.0"
proptest-derive = "0.4.0"
quote = "1.0.6"
rand = "0.7.3"
rand_core = "0.5.1"
ring = { version = "0.16.20", features = ["std"] }
serde = "1.0.193"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
trybuild = "1.0.80"
serde-name = "0.1.1"
serde_bytes = "0.11.6"
sha2 = "0.9.3"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
signature = "2.1.0"
static_assertions = "1.1.0"
thiserror = "1.0.37"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
typenum = "1.17.0"
x25519-dalek = "1.2.0"
starcoin-crypto = { path = "crypto" }
starcoin-crypto-macro = { path = "crypto/crypto-macro" }
aptos-crypto = { path = "crates/aptos-crypto", features = ["fuzzing"] }
aptos-crypto-derive = { path = "crates/aptos-crypto-derive" }
syn = { version = "1.0.30", features = ["derive"] }


[profile.dev]
panic = "unwind"

[profile.release]
debug = false
panic = "unwind"
debug-assertions = false
codegen-units = 1

[patch.crates-io]
x25519-dalek = { git = "https://github.com/aptos-labs/x25519-dalek", branch = "zeroize_v1" }
