[package]
name = "starcoin-crypto"
version = "1.10.0-rc.2"
authors = ["Starcoin Core Dev <dev@starcoin.org>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_bytes = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
diem-crypto = { workspace = true, features = ["fuzzing"] }
diem-crypto-derive = { workspace = true }
aptos-crypto = { workspace = true, features = ["fuzzing"] }
aptos-crypto-derive = { workspace = true }
bcs = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
once_cell = { workspace = true }
serde-name = { workspace = true }
starcoin-crypto-macro = { workspace = true }
openrpc-schema = { workspace = true }

[features]
default = []
fuzzing = ["diem-crypto/fuzzing", "aptos-crypto/fuzzing"]
avx512f = ["diem-crypto/avx512f"]
