[package]
name = "aptos-crypto-derive"
description = "Custom derives for `aptos-crypto`"
version = "0.0.3"

authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.75.0"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.38"
quote = "1.0.18"
syn = { version = "1.0.92", features = ["derive", "extra-traits"] }

[dev-dependencies]
anyhow = "1.0.71"
