[package]
name = "aptos-crypto"
description = "Aptos crypto"
version = "0.0.3"

authors = ["Aptos Labs <opensource@aptoslabs.com>"]
edition = "2021"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
repository = "https://github.com/aptos-labs/aptos-core"
rust-version = "1.75.0"

[dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.71"
aptos-crypto-derive = { path = "../aptos-crypto-derive" }
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-groth16 = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
base64 = "0.13.0"
bcs = { git = "https://github.com/aptos-labs/bcs.git", rev = "d31fab9d81748e2594be5cd5cdf845786a30562d" }
blst = "0.3.11"
bulletproofs = { version = "4.0.0" }
bytes = { version = "1.4.0", features = ["serde"] }
curve25519-dalek = "3"
curve25519-dalek-ng = "4"
digest = "0.9.0"
ed25519-dalek = { version = "1.0.1", features = ["std", "serde"] }
ff = { version = "0.13", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
hkdf = "0.10.0"
libsecp256k1 = "0.7.0"
merlin = "3"
more-asserts = "0.3.0"
neptune = { version = "13.0.0", default_features = false }
num-bigint = { version = "0.3.2", features = ["rand"] }
num-integer = "0.1.42"
once_cell = "1.10.0"
p256 = "0.13.2"
poseidon-ark = { git = "https://github.com/arnaucube/poseidon-ark.git", rev = "6d2487aa1308d9d3860a2b724c485d73095c1c68" }
proptest = { version = "1.4.0", optional = true }
proptest-derive = { version = "0.4.0", optional = true }
rand = "0.7.3"
rand_core = "0.5.1"
ring = { version = "0.16.20", features = ["std"] }
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde-name = "0.1.1"
serde_bytes = "0.11.6"
sha2 = "0.9.3"
sha2_0_10_6 = { package = "sha2", version = "0.10.6" }
sha3 = "0.9.1"
signature = "2.1.0"
static_assertions = "1.1.0"
thiserror = "1.0.37"
tiny-keccak = { version = "2.0.2", features = ["keccak", "sha3"] }
typenum = "1.17.0"
x25519-dalek = "1.2.0"

[dev-dependencies]
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
bitvec = "1.0.1"
blake2 = "0.10.4"
blake2-rfc = "0.2.18"
byteorder = "1.4.3"
criterion = "0.3.5"
proptest = "1.4.0"
proptest-derive = "0.4.0"
serde_json = { version = "1.0.81", features = [
    "preserve_order",
    "arbitrary_precision",
] } # Note: arbitrary_precision is required to parse u256 in JSON
trybuild = "1.0.80"

[features]
default = []
assert-private-keys-not-cloneable = []
cloneable-private-keys = []
fuzzing = ["proptest", "proptest-derive", "cloneable-private-keys"]
testing = []

[[bench]]
name = "ark_bls12_381"
harness = false

[[bench]]
name = "ark_bn254"
harness = false

[[bench]]
name = "bls12381"
harness = false

[[bench]]
name = "bulletproofs"
harness = false

[[bench]]
name = "ed25519"
harness = false

[[bench]]
name = "hash"
harness = false

[[bench]]
name = "noise"
harness = false

[[bench]]
name = "ristretto255"
harness = false

[[bench]]
name = "secp256k1"
harness = false

[[bench]]
name = "poseidon_bn254"
harness = false
